src/ui/public/chrome/directives/app_switcher/app_switcher.less
@import (reference) "~ui/styles/mixins";
@import (reference) "~ui/styles/variables";

// as - App Switcher
@as-open-width: 160px;
@as-closed-width: 53px;
@app-icon-height: 36px;
@transition-time: .35s;
@transition-delay: .25s;
@app-links-wrapper-background: #3caed2;

@firstLinkColor: @kibanaYellow1;
@secondLinkColor: @kibanaGreen1;
@thirdLinkColor: #59C6C5;

body { overflow-x: hidden; }

.app-links-wrapper {
  width: @as-open-width;
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  z-index: 0;
  background-color: @app-links-wrapper-background;
  overflow: hidden;
  transition: width @transition-time;
  transition-delay: @transition-delay;

  &:hover {
    .app-title {
      display: inline-block;
    }
    + .app-wrapper {
      transform: translateX(@as-open-width - @as-closed-width);
    }
  }

  .logo {
    height: 70px;
    width: @as-open-width;
    list-style-type: none;
    &.kibana {
      background-image: url("~ui/images/kibana.svg");
      background-position: 6px 10px;
      background-size: 140px 50px;
      background-repeat: no-repeat;
      background-color: #e8488b;
    }
  }
  .bottom-apps {
    position: absolute;
    bottom: 0;
  }
}
.app-wrapper {
  .real-flex-parent();
  position: absolute;
  transition: transform @transition-time;
  transition-delay: @transition-delay;
  left: @as-closed-width;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
  margin: 0 auto;
  background-color: #fff;

  &-panel {
    .flex-parent(@shrink: 0);
    box-shadow: -4px 0px 3px rgba(0,0,0,0.2);
  }

  .navbar-right {
    margin-right: 0;
  }
}
.app-links {
  text-align: justify;

  .app-link {
    width: @as-open-width;
    height: @app-icon-height;
    line-height:  24px;


    > a {
      display: block;
      height: 100%;
      color: #fff;
    }

    &:hover {
      background-color: lighten(@app-links-wrapper-background, 7.5%);
    }

    .app-icon {
      float: left;
      filter: invert(100%);
      font-weight: bold;
      text-align: center;
      font-size: 1.7em;
      display: inline-block;
      height: @app-icon-height;
      width: @as-closed-width;
      > i {
      }

      > img {
        height: 16px;
        margin-top: 6px;
      }
    }

    .app-icon-missing {
      float: left;
      text-align: center;
      font-size: 1.7em;
      display: inline-block;
      height: @app-icon-height;
      width: @as-closed-width;
      background-position: center;
      background-size: contain;
      background-repeat: no-repeat;
    }

    .app-title {
      width: calc(@as-open-width - @as-closed-width);
      display: inline-block;
      float: right;
      font-size: 0.9em;
      text-align: left;
      padding-left: 3px;
      line-height: @app-icon-height;
    }

    &.active {
      background-color: lighten(@app-links-wrapper-background, 10%);
      > a {
        color: #333;
        text-decoration: none;
      }
      img {
        filter: invert(100%);
      }
    }

    &:nth-child(1) {
      background-color: @firstLinkColor;
      &:hover {
        background-color: lighten(@firstLinkColor, 5%);
      }
    }

    &:nth-child(2) {
      background-color: @secondLinkColor;
      &:hover {
        background-color: lighten(@secondLinkColor, 5%);
      }
    }

    &:nth-child(3) {
      background-color: @thirdLinkColor;
      &:hover {
        background-color: lighten(@thirdLinkColor, 5%);
      }
    }

  }

}

